KDP-7429 add sh:or for node classes (#362)
* KDP-7429 add sh:or for node classes

* KDP-7429 resolve review comments

* KDP-7429 add nodeshapefactory tests

* KDP-7429 add testdata

* KDP-7429 rename functions

* KDP-7429 add query type

* KDP-7429 add documentation

* KDP-7429 fix tests

* KDp-7429 add distinct to union select

* KDP-7429 add better way of deciding if distinct has to be added to query

Co-authored-by: Jouri Fledderman <jouri.fledderman@kadaster.nl>